--- a/index.ipynb
+++ b/index.ipynb
@@ -1359,6 +1359,7 @@
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
+    "    list(map())\n",
     "    pass"
    ]
   },
