--- a/index.ipynb
+++ b/index.ipynb
@@ -1359,7 +1359,7 @@
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
-    "    list(map(lambda slope: {(x2-x1)/)\n",
+    "    list(map(lambda slope: {(x2-x1)/(y2-y1))\n",
     "    pass"
    ]
   },
