Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1359,8 +1359,8 @@
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
-    "    list(map(lambda slope: slope{(x2-x1)/(y2-y1))\n",
-    "    pass"
+    "    list(map(lambda slope: slope{(x2-x1)/(y2-y1))}    \n",
+    "             pass"
    ]
   },
   {
