--- a/index.ipynb
+++ b/index.ipynb
@@ -1360,7 +1360,7 @@
    "source": [
     "def slope(x_values, y_values):\n",
     "    list(map(lambda slope: slope{(x2-x1)/(y2-y1)}\n",
-    "        return \n",
+    "        return 'x_values'\n",
     "    pass"
    ]
   },
