Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1354,12 +1354,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-20-42bf6c7c2edf>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-42bf6c7c2edf>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    list(map(lambda slope: slope{(x2-x1)/(y2-y1)}\u001b[0m\n\u001b[0m                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def slope(x_values, y_values):\n",
-    "    list(map(lambda slope: slope{(x2-x1)/(y2-y1)}\n",
+    "    list(map(lambda slope: slope(x2-x1)/(y2-y1)\n",
     "        return {'x_values':x_value, 'Y_values':Y_values}\n",
     "    pass"
    ]
