--- a/index.ipynb
+++ b/index.ipynb
@@ -1354,22 +1354,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-20-42bf6c7c2edf>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-21-ce9cb9042c8e>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-42bf6c7c2edf>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    list(map(lambda slope: slope{(x2-x1)/(y2-y1)}\u001b[0m\n\u001b[0m                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-21-ce9cb9042c8e>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return {'x_values':x_value, 'Y_values':Y_values}\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "def slope(x_values, y_values):\n",
     "    list(map(lambda slope: slope(x2-x1)/slope(y2-y1))\n",
-    "        return {'x_values':x_value, 'Y_values':Y_values}\n",
+    "    return {'x_values':x_value, 'Y_values':Y_values}\n",
     "    pass"
    ]
   },
