--- a/index.ipynb
+++ b/index.ipynb
@@ -1368,7 +1368,7 @@
    ],
    "source": [
     "def slope(x_values, y_values):\n",
-    "    list(map(lambda :'x_values'=(x2-x1)/(y2-y1))\n",
+    "    list(map(lambda :'x_values'=(x2-x1)/'y_values'(y2-y1))\n",
     "    return {'x_values':x_value, 'Y_values':Y_values}\n",
     "    pass"
    ]
