--- a/index.ipynb
+++ b/index.ipynb
@@ -1354,21 +1354,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-22-96e9c70006f4>, line 3)",
+     "evalue": "invalid syntax (<ipython-input-23-fe0bee58dcb5>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-22-96e9c70006f4>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return {'x_values':x_value, 'Y_values':Y_values}\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-23-fe0bee58dcb5>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    list(map(lambda :('x_values'=(x2-x1))/('y_values'=(y2-y1))\u001b[0m\n\u001b[0m                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "def slope(x_values, y_values):\n",
-    "    list(map(lambda :('x_values'=(x2-x1)/('y_values'=(y2-y1))\n",
+    "    list(map(lambda :('x_values'=(x2-x1))/('y_values'=(y2-y1))\n",
     "    return {'x_values':x_value, 'Y_values':Y_values}\n",
     "    pass"
    ]
