Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1354,21 +1354,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-28-4d599edd7693>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-27-795a93b3a13b>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-28-4d599edd7693>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    list(map(lambda x:('x_values'(x2-x1))/('y_values'=(y2-y1), slope)\u001b[0m\n\u001b[0m                                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-27-795a93b3a13b>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    list(map(lambda('x_values'),('y_values'):('x_values'(x2-x1))/('y_values'=(y2-y1), slope)\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "def slope(x_values, y_values):\n",
-    "    list(map(lambda x:('x_values'(x2-x1))/('y_values'(y2-y1), slope)\n",
+    "    list(map(lambda :('x_values'(x2-x1))/('y_values'=(y2-y1), slope)\n",
     "    return {'x_values':x_value, 'Y_values':y_values}\n",
     "    pass"
    ]
