--- a/index.ipynb
+++ b/index.ipynb
@@ -1354,13 +1354,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-31-ba547a62c5a2>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-31-ba547a62c5a2>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return 'x_values':x_value, 'Y_values':y_values\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def slope(x_values, y_values):\n",
     "    list(map(lambda x:('x_values'(x2-x1))/('y_values'(y2-y1), slope)\n",
-    "        return 'x_values':x_value, 'Y_values':y_values\n",
+    "        return 'x':x_value, 'Y_values':y_values\n",
     "    pass"
    ]
   },
