Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1369,7 +1369,7 @@
    "source": [
     "def slope(x_values, y_values):\n",
     "    list(map(lambda x:('x_values'(x2-x1))/('y_values'(y2-y1), slope)\n",
-    "        return {'x':x_value, 'Y':y_values\n",
+    "        return {'x':x_value, 'Y':y_values}\n",
     "    pass"
    ]
   },
