--- a/index.ipynb
+++ b/index.ipynb
@@ -1354,15 +1354,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-31-ba547a62c5a2>, line 3)",
+     "evalue": "invalid syntax (<ipython-input-32-b62dcfa2a221>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-31-ba547a62c5a2>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return 'x_values':x_value, 'Y_values':y_values\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-32-b62dcfa2a221>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return {'x':x_value, 'Y':y_values}\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
