Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1354,22 +1354,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-32-b62dcfa2a221>, line 3)",
+     "evalue": "invalid syntax (<ipython-input-33-bd890883d655>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-32-b62dcfa2a221>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return {'x':x_value, 'Y':y_values}\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-33-bd890883d655>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return {'x':x_value, 'Y':y_values}\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "def slope(x_values, y_values):\n",
     "    list(map(lambda x:('x_values'(x2-x1))/('y_values'(y2-y1), slope)\n",
-    "    {'x':x_value, 'Y':y_values}\n",
+    "       return {'x':x_value, 'Y':y_values}\n",
     "    pass"
    ]
   },
