Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1354,15 +1354,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-33-bd890883d655>, line 3)",
+     "evalue": "invalid syntax (<ipython-input-34-92c0ab31cd27>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-33-bd890883d655>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return {'x':x_value, 'Y':y_values}\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-34-92c0ab31cd27>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return {'x':x_value, 'y':y_values}\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
