Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1367,8 +1367,7 @@
     }
    ],
    "source": [
-    "def slope(x_values, y_values):\n",
-    "\n",
+    "def slope(x_values, y_values): m = \n",
     "       return {'x':x_value, 'y':y_values}\n",
     "    pass"
    ]
