--- a/index.ipynb
+++ b/index.ipynb
@@ -1367,7 +1367,7 @@
     }
    ],
    "source": [
-    "def slope(x_values, y_values): m = (y2-y1)/(x2)\n",
+    "def slope(x_values, y_values): m = (y2-y1)/(x2-x1)\n",
     "       return {'x':x_value, 'y':y_values}\n",
     "    pass"
    ]
