Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1354,22 +1354,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-34-92c0ab31cd27>, line 3)",
+     "ename": "IndentationError",
+     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-34-92c0ab31cd27>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return {'x':x_value, 'y':y_values}\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<tokenize>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    pass\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
      ]
     }
    ],
    "source": [
     "def slope(x_values, y_values): m = (y2-y1)/(x2-x1)\n",
     "       return {'x':x_value, 'y':y_values}\n",
-    "    pass"
+    "        pass"
    ]
   },
   {
