Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1354,22 +1354,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-37-e9d65170b30e>, line 2)",
+     "ename": "SyntaxError",
+     "evalue": "'return' outside function (<ipython-input-38-fd17bf351138>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-37-e9d65170b30e>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return {'x':x_value, 'y':y_values}\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-38-fd17bf351138>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return {'x':x_value, 'y':y_values}\u001b[0m\n\u001b[0m                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
      ]
     }
    ],
    "source": [
     "def slope(x_values, y_values): m = (y2-y1)/(x2-x1)\n",
     "return {'x':x_value, 'y':y_values}\n",
-    "    pass"
+    "pass"
    ]
   },
   {
