--- a/index.ipynb
+++ b/index.ipynb
@@ -1358,8 +1358,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def slope(x_values, y_values): m = (y2-y1)/(x2-x1)\n",
+    "    return \n",
     "pass"
    ]
   },
