Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1359,7 +1359,7 @@
    "outputs": [],
    "source": [
     "def slope(x_values, y_values): m = (y2-y1)/(x2-x1)\n",
-    "    return {'x2'}\n",
+    "    return {'x2','x1'}\n",
     "pass"
    ]
   },
