--- a/index.ipynb
+++ b/index.ipynb
@@ -1354,12 +1354,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-42-3636bf97da9e>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-42-3636bf97da9e>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return {'x2','x1':x_values, 'y2','y1':y_values}\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def slope(x_values, y_values): m = (y2-y1)/(x2-x1)\n",
-    "    return {'x2','x1':x_values, 'y2','y1':y_values}\n",
+    "return {'x2','x1':x_values, 'y2','y1':y_values}\n",
     "pass"
    ]
   },
