Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1367,7 +1367,8 @@
     }
    ],
    "source": [
-    "def slope(x_values, y_values): m = (y2-y1)/(x2-x1)\n",
+    "def slope(x_values, y_values): \n",
+    "    m = (y2-y1)/(x2-x1)\n",
     "return {('x2','x1'):x_values, ('y2','y1'):y_values}\n",
     "pass"
    ]
