Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1354,21 +1354,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "'return' outside function (<ipython-input-43-c0b33f5c030c>, line 2)",
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-44-0aa6a491576d>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-43-c0b33f5c030c>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return {('x2','x1'):x_values, ('y2','y1'):y_values}\u001b[0m\n\u001b[0m                                                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-44-0aa6a491576d>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    m = (y2-y1)/(x2-x1)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
      ]
     }
    ],
    "source": [
     "def slope(x_values, y_values): \n",
-    "    m = (y2-y1)/(x2-x1)\n",
+    "m = (y2-y1)/(x2-x1)\n",
     "return {('x2','x1'):x_values, ('y2','y1'):y_values}\n",
     "pass"
    ]
