--- a/index.ipynb
+++ b/index.ipynb
@@ -1368,7 +1368,7 @@
    ],
    "source": [
     "def slope(x_values, y_values): m = (y2-y1)/(x2-x1)\n",
-    "return {('x2','x1'):x_values, ('y2','y1'):y_values\n",
+    "    retuen\n",
     "pass"
    ]
   },
