--- a/index.ipynb
+++ b/index.ipynb
@@ -1354,21 +1354,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-44-0aa6a491576d>, line 2)",
+     "evalue": "unexpected indent (<ipython-input-45-eeb7f6cac5a0>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-44-0aa6a491576d>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    m = (y2-y1)/(x2-x1)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-45-eeb7f6cac5a0>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return slope\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
      ]
     }
    ],
    "source": [
     "def slope(x_values, y_values): m = (y2-y1)/(x2-x1)\n",
-    "    retuen\n",
+    "    return slope\n",
     "pass"
    ]
   },
