Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1354,21 +1354,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-45-eeb7f6cac5a0>, line 2)",
+     "ename": "SyntaxError",
+     "evalue": "'return' outside function (<ipython-input-46-ea8a5e90cb1b>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-45-eeb7f6cac5a0>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return slope\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-46-ea8a5e90cb1b>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return slope\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
      ]
     }
    ],
    "source": [
     "def slope(x_values, y_values): m = (y2-y1)/(x2-x1)\n",
-    "    return slope\n",
+    "return s\n",
     "pass"
    ]
   },
