--- a/index.ipynb
+++ b/index.ipynb
@@ -1358,7 +1358,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def slope(x_values, y_values): m = (y2-y1)/(x2-x1)\n",
+    "def slope(x_values, y_values):\n",
     "pass"
    ]
   },
