--- a/index.ipynb
+++ b/index.ipynb
@@ -1359,7 +1359,7 @@
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
-    "\n",
+    "xy_values\n",
     "pass"
    ]
   },
