--- a/index.ipynb
+++ b/index.ipynb
@@ -1304,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1359,7 +1359,7 @@
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
-    "xy_values = \n",
+    "xy_values = sp\n",
     "pass"
    ]
   },
