Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1361,7 +1361,8 @@
     "def slope(x_values, y_values):\n",
     "xy_values = sorted points(x_values,y_values)\n",
     "x1= xy_values (0,0)\n",
-    "y1= xy_values ()\n",
+    "y1= xy_values (0,1)\n",
+    "\n",
     "pass"
    ]
   },
