Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1362,7 +1362,8 @@
     "xy_values = sorted points(x_values,y_values)\n",
     "x1= xy_values (0,0)\n",
     "y1= xy_values (0,1)\n",
-    "x2= xy_values ()\n",
+    "x2= xy_values (-1,0)\n",
+    "\n",
     "pass"
    ]
   },
