--- a/index.ipynb
+++ b/index.ipynb
@@ -1363,7 +1363,8 @@
     "x1= xy_values (0,0)\n",
     "y1= xy_values (0,1)\n",
     "x2= xy_values (-1,0)\n",
-    "y2= xy_values ()\n",
+    "y2= xy_values (-1,1)\n",
+    "\n",
     "pass"
    ]
   },
