--- a/index.ipynb
+++ b/index.ipynb
@@ -1354,9 +1354,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-49-4b080ae5f81e>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-49-4b080ae5f81e>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    xy_values = sorted points(x_values,y_values)\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "def slope(x_values, y_values):\n",
     "xy_values = sorted points(x_values,y_values)\n",
@@ -1365,6 +1374,7 @@
     "x2= xy_values (-1,0)\n",
     "y2= xy_values (-1,1)\n",
     "m = (y2-y1)/(x2-x1)\n",
+    "return m\n",
     "pass"
    ]
   },
