--- a/index.ipynb
+++ b/index.ipynb
@@ -1354,15 +1354,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-49-4b080ae5f81e>, line 2)",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-50-4b4c3c277744>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-49-4b080ae5f81e>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    xy_values = sorted points(x_values,y_values)\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-50-4b4c3c277744>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    xy_values = sorted points(x_values,y_values)\u001b[0m\n\u001b[0m                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
