--- a/index.ipynb
+++ b/index.ipynb
@@ -1361,8 +1361,8 @@
     "def slope(x_values, y_values):\n",
     "    xy_values = sorted_points(x_values,y_values)\n",
     "    x1= sorted_points (0,0)\n",
-    "    y1=  (0,1)\n",
-    "    x2= xy_values (-1,0)\n",
+    "    y1= sorted_points (0,1)\n",
+    "    x2= xy (-1,0)\n",
     "    y2= xy_values (-1,1)\n",
     "    m = (y2-y1)/(x2-x1)\n",
     "    return m\n",
