--- a/index.ipynb
+++ b/index.ipynb
@@ -1363,7 +1363,7 @@
     "    x1= sorted_points (0,0)\n",
     "    y1= sorted_points (0,1)\n",
     "    x2= sorted_points (-1,0)\n",
-    "    y2= xy_values (-1,1)\n",
+    "    y2= sorted_points (-1,1)\n",
     "    m = (y2-y1)/(x2-x1)\n",
     "    return m\n",
     "pass"
