Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1354,12 +1354,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
-    "     = sorted_points(x_values,y_values)\n",
+    "    sorted_values = sorted_points(x_values,y_values)\n",
     "    x1= sorted_points (0,0)\n",
     "    y1= sorted_points (0,1)\n",
     "    x2= sorted_points (-1,0)\n",
